Adicionado imagens na página e alterado titulo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Exercicio Aula</title>
     <meta charset="utf-8">
   </head>
   <body>
     <h1>Página feita por Marcos</h1>
+    <img src="imagens/queen.jpg" alt="Imagem 1">
+    <img src="imagens/beatles-abbey-road-faixa.jpg" alt="Imagem 2">
   </body>
 </html>
